tests/agl/rejections/parse/extern_combined_with_builtin.agl
extern builtin def f(x: int) -> int
